test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_decl_and_use_self_reference.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  ;
  {
  union
  identifier(s)
  *
  identifier(ptr)
  ;
  }
  return
  const int(0)
  ;
  }
